♻️ refactor: paginate the response
of fetchAllStudents() endpoint
